# advanced-tt-track

./: .env  Cargo.toml  dev_services.yaml
kubernetes/: database.deployment.yaml
migrations/2023-03-16-095515_db_setup/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: contact_information.rs  location.rs  matches.rs  mod.rs  player.rs  set.rs  team.rs  user.rs
src/routes/: user_router.rs
