[package]
name = "advanced-tt-track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.10"
bb8 = "0.8.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
dotenvy = "0.15.6"
hyper = "0.14.24"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
